--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import url('./vendor/normalize.css');
+@import url('./vendor/fonts.css');
+@import url('./blocks/page/page.css');
+@import url('./blocks/button/button.css');
+@import url('./blocks/header/header.css');
+@import url('./blocks/header/__logo/header__logo.css');
+@import url('./blocks/header/__logo-link/header__logo-link.css');
+@import url('./blocks/profile/profile.css');
+@import url('./blocks/profile/__container/profile__container.css');
+@import url('./blocks/profile/__avatar-container/profile__avatar-container.css');
+@import url('./blocks/profile/__avatar/profile__avatar.css');
+@import url('./blocks/profile/__info/profile__info.css');
+@import url('./blocks/profile/__name/profile__name.css');
+@import url('./blocks/profile/__about/profile__about.css');
+@import url('./blocks/profile/__edit-button/profile__edit-button.css');
+@import url('./blocks/profile/__add-button/profile__add-button.css');
+@import url('./blocks/cards/__list/cards__list.css');
+@import url('./blocks/cards/__item/cards__item.css');
+@import url('./blocks/cards/__item-photo/cards__item-photo.css');
+@import url('./blocks/cards/__item-title/cards__item-title.css');
+@import url('./blocks/cards/__item-container/cards__item-container.css');
+@import url('./blocks/cards/__item-like-icon-button/cards__item-like-icon-button.css');
+@import url('./blocks/cards/__item-like-icon-button/_active/cards__item-like-icon-button_active.css');
+@import url('./blocks/footer/footer.css');
+@import url('./blocks/footer/__copyright/footer__copyright.css');
+@import url('./blocks/popup/popup.css');
+@import url('./blocks/popup/_opened/popup_opened.css');
+@import url('./blocks/popup/__container/popup__container.css');
+@import url('./blocks/popup/__container-image/popup__container-image.css');
+@import url('./blocks/popup/__image/popup__image.css');
+@import url('./blocks/popup/__image-caption/popup__image-caption.css');
+@import url('./blocks/popup/__close-button/popup__close-button.css');
+@import url('./blocks/popup/__close-button/_img/popup__close-button_img.css');
+@import url('./blocks/popup/__title/popup__title.css');
+@import url('./blocks/popup/__title/_add/popup__title_add.css');
+@import url('./blocks/popup/__title/_delete/popup__title_delete.css');
+@import url('./blocks/popup/__label/popup__label.css');
+@import url('./blocks/popup/__field/popup__field.css');
+@import url('./blocks/popup/__input/_type/popup__input_type_error.css');
+@import url('./blocks/popup/__error/_visible/popup__error_visible.css');
+@import url('./blocks/popup/__field/_add/popup__field_add.css');
+@import url('./blocks/popup/__submit-button/popup__submit-button.css');
+@import url('./blocks/popup/__button/_disabled/popup__button_disabled.css');
+@import url('./blocks/cards/__item-delete-button/cards__item-delete-button.css');
+@import url('./blocks/cards/__item-likes/cards__item-likes.css');
