--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,6 +1,6 @@
 .page {
     min-width: 320px;
-    max-width: 1280px;
+    max-width: 100%;
     font-family: 'Inter', Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
